add project card

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         <div class="container">
 
             <div class="hero-header">
-                <div class="social-links hero-header-social wow animate__animated animate__fadeInDown"
-                    data-wow-delay="0.2s">
+                <div class="social-links hero-header-social wow animate__animated animate__fadeInDown" data-wow-delay="0.2s">
                     <div class="hero-header-phone">
                         <a class="contacts-link" href="tel:+375447167805">+375 44 716-78-05</a>
                     </div>
@@ -60,8 +59,7 @@
                     </h1>
                     <p class="hero-discription wow animate__animated animate__fadeInRight" data-wow-delay="0.6s">
                         <span style="color: #FFBB01;">Frontend-разработчик, web-дизайнер. </span>
-                        <br> Беларусь Минск.<br> Открыта для интересных проектов и новых возможностей по всему миру,
-                        всегда стараюсь принести пользу. Буду рада сотрудничеству!
+                        <br> Беларусь Минск.<br> Открыта для интересных проектов и новых возможностей по всему миру, всегда стараюсь принести пользу. Буду рада сотрудничеству!
                     </p>
                 </div>
 
@@ -154,7 +152,7 @@
                             <div class="direction-r">
                                 <div class="flag-wrapper">
                                     <span class="hexa"></span>
-                                    <span class="flag"><a href="img/Microsoft 20480 - Zhidko.jpg"
+                                    <span class="flag flag-sert"><a href="img/Microsoft 20480 - Zhidko.jpg"
                                             target="_blank">сертификат</a></span>
                                     <span class="time-wrapper"><span class="time">01.06.2020</span></span>
                                 </div>
@@ -174,7 +172,7 @@
                             <div class="direction-l">
                                 <div class="flag-wrapper">
                                     <span class="hexa"></span>
-                                    <span class="flag"><a href="https://www.futurelearn.com/certificates/fv2hhxt"
+                                    <span class="flag flag-sert"><a href="https://www.futurelearn.com/certificates/fv2hhxt"
                                             target="_blank">сертификат</a></span>
                                     <span class="time-wrapper"><span class="time">16.07.2020</span></span>
                                 </div>
@@ -193,7 +191,7 @@
                             <div class="direction-r">
                                 <div class="flag-wrapper">
                                     <span class="hexa"></span>
-                                    <span class="flag"><a href="img/WebSert-Zhidko.jpg"
+                                    <span class="flag flag-sert"><a href="img/WebSert-Zhidko.jpg"
                                             target="_blank">сертификат</a></span>
                                     <span class="time-wrapper"><span class="time">20.08.2020</span></span>
                                 </div>
@@ -236,8 +234,7 @@
                                 <li>Работа с системой управления сайтом MODx (Evo) и WordPress;</li>
                                 <li>Проектирование пользовательских интерфейсов;</li>
                                 <li>Разработка визуальных материалов;</li>
-                                <li>Адаптивная, кроссбраузерная верстка с использованием Bootstrap, Materialize, jQuery
-                                    и без.
+                                <li>Адаптивная, кроссбраузерная верстка с использованием Bootstrap, Materialize, jQuery и без.
                                 </li>
                             </ul>
                         </div>
@@ -385,8 +382,7 @@
                                 </div>
                             </div>
                             <div class="card-block card-block-poster">
-                                <h2><a class="block-link" href="https://ulyanazhidko.github.io/Kuba/"
-                                        target="_blank">Посмотреть</a>
+                                <h2><a class="block-link" href="https://ulyanazhidko.github.io/Kuba/" target="_blank">Посмотреть</a>
                                 </h2>
                             </div>
                         </div>
@@ -412,8 +408,7 @@
                                 </div>
                             </div>
                             <div class="card-block card-block-poster">
-                                <h2><a class="block-link" href="https://zhidkoulyana.wixsite.com/bvlgaryposters"
-                                        target="_blank">Посмотреть</a>
+                                <h2><a class="block-link" href="https://zhidkoulyana.wixsite.com/bvlgaryposters" target="_blank">Посмотреть</a>
                                 </h2>
                             </div>
                         </div>
@@ -437,9 +432,7 @@
                                 </div>
                             </div>
                             <div class="card-block card-block-poster">
-                                <h2><a class="block-link"
-                                        href="https://www.figma.com/proto/27iwtDwhwgwagDixf2kDhN/Ihana?node-id=1%3A83&scaling=scale-down&page-id=0%3A1"
-                                        target="_blank">Посмотреть</a>
+                                <h2><a class="block-link" href="https://www.figma.com/proto/27iwtDwhwgwagDixf2kDhN/Ihana?node-id=1%3A83&scaling=scale-down&page-id=0%3A1" target="_blank">Посмотреть</a>
                                 </h2>
                             </div>
                         </div>
@@ -463,8 +456,7 @@
                                 </div>
                             </div>
                             <div class="card-block card-block-poster">
-                                <h2><a class="block-link" href="https://ulyanazhidko.github.io/MK-test/"
-                                        target="_blank">Посмотреть</a>
+                                <h2><a class="block-link" href="https://ulyanazhidko.github.io/MK-test/" target="_blank">Посмотреть</a>
                                 </h2>
                             </div>
                         </div>
@@ -521,26 +513,29 @@
                         </div>
                     </a>
 
-                    <div class="card filterDiv front">
+                    <div class="card filterDiv design">
                         <div class="card-project-block">
-                            <img class="card-project-image" src="img/project/emo.png" alt="приложение">
+                            <img class="card-project-image" src="img/photo/планшеты.jpg" alt="проект сайт/приложение">
 
                             <div class="card-text">
 
                                 <div class="card-heading">
-                                    <h3 class="card-title">Сайт курса для мам</h3>
+                                    <h3 class="card-title">Дизайн-проект "Супрематизм"</h3>
                                 </div>
                                 <!--Карточкa инфо-->
                                 <div class="card-info">
                                     <div class="category">
                                         <h4 class="project-subtitle card-susubtitle">Инструменты:</h4>
-                                        <p class="project-paragraph about-box-text">HTML/CSS</p>
+                                        <p class="project-paragraph about-box-text">Adobe Illustrator</p>
+                                        <p class="project-paragraph about-box-text">Adobe Photoshop</p>
+                                        <p class="project-paragraph about-box-text">Adobe After Effects</p>
+                                        <p class="project-paragraph about-box-text">Figma</p>
+                                        <p class="project-paragraph about-box-text">Wix</p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="card-block card-block-poster">
-                                <h2><a class="block-link" href="https://psyexpert.pro/emotions.html"
-                                        target="_blank">Посмотреть</a>
+                            <div class="card-block">
+                                <h2><a class="block-link" href="https://zhidkoulyana.wixsite.com/suprematism" target="_blank">Посмотреть</a>
                                 </h2>
                             </div>
                         </div>
@@ -601,11 +596,9 @@
                             <a class="contacts-link" href="tel:+375447167805">+375 44 716-78-05</a>
                         </div>
                         <!-- social-icins -->
-                        <div class="social-links footer-social-links wow animate__animated animate__zoomIn"
-                            data-wow-delay="1.2s">
+                        <div class="social-links footer-social-links wow animate__animated animate__zoomIn" data-wow-delay="1.2s">
 
-                            <a href="https://github.com/UlyanaZhidko?tab=repositories" class="social-link"
-                                target="_blank">
+                            <a href="https://github.com/UlyanaZhidko?tab=repositories" class="social-link" target="_blank">
                                 <svg width="22" height="22" class="social-link-icon">
                                     <use xlink:href="img/icons.svg#github"></use>
                                 </svg>
@@ -637,8 +630,7 @@
 
                             <div class="my-cv wow animate__animated animate__fadeIn" data-wow-delay="1.4s">
 
-                                <a href="https://drive.google.com/file/d/1OgPRbqrIo3WUg4OUJijYoMJXqh7TsjAE/view?usp=sharing"
-                                    class="contacts-link" target="_blank">Мое резюме (.pdf)
+                                <a href="https://drive.google.com/file/d/1OgPRbqrIo3WUg4OUJijYoMJXqh7TsjAE/view?usp=sharing" class="contacts-link" target="_blank">Мое резюме (.pdf)
                                     <svg width="30" height="30">
                                         <use xlink:href="img/icons.svg#cv"></use>
                                     </svg>
@@ -646,8 +638,7 @@
                             </div>
 
                             <div class="contacts-police-form">
-                                <a class="contacts-police add__ad wow animate__animated animate__fadeIn"
-                                    data-wow-delay="1.4s">
+                                <a class="contacts-police add__ad wow animate__animated animate__fadeIn" data-wow-delay="1.4s">
                                     Политика конфиденциальности
                                 </a>
                             </div>
@@ -657,24 +648,16 @@
                     <div class="modal modal__add hide">
                         <div class="modal__block">
                             <div class="on-hover">
-                                <p> Эта страница не собирает данные о Вас, но так как она расположена на github pages на
-                                    неё распространяется политика конфиденциальности github. По отношению к Вам будет
-                                    честно расположить здесь вот часть политики, чтобы Вы
+                                <p> Эта страница не собирает данные о Вас, но так как она расположена на github pages на неё распространяется политика конфиденциальности github. По отношению к Вам будет честно расположить здесь вот часть политики, чтобы Вы
                                     знали, какую информацию о вас собрали при посещении этой страницы:
                                 </p>
                             </div>
                             <div class="modal__content text-block hidden-block">
                                 <p>
-                                    If you're accessing our Service or Website, we automatically collect the same basic
-                                    information that most services collect, subject, where necessary, to your consent.
-                                    This includes information about how you use the Service, such as the pages you view,
-                                    the referring site, your IP address and session information, and the date and time
-                                    of each request. This is information we collect from every visitor to the Website,
-                                    whether they have an Account or not. This information
+                                    If you're accessing our Service or Website, we automatically collect the same basic information that most services collect, subject, where necessary, to your consent. This includes information about how you use the Service, such as the pages you view,
+                                    the referring site, your IP address and session information, and the date and time of each request. This is information we collect from every visitor to the Website, whether they have an Account or not. This information
                                     may include User Personal information.
-                                    <br> We may collect certain information about your device, such as its IP address,
-                                    browser or client application information, language preference, operating system and
-                                    application version, device type and ID, and device
+                                    <br> We may collect certain information about your device, such as its IP address, browser or client application information, language preference, operating system and application version, device type and ID, and device
                                     model and manufacturer. This information may include User Personal information.
                                 </p>
                             </div>
