add: project card. edit: title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Portfolio Ulyana_Zhidko</title>
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" />
@@ -314,6 +314,34 @@
 
                     <div class="card filterDiv design">
                         <div class="card-project-block">
+                            <img class="card-project-image" src="img/photo/планшеты.jpg" alt="проект сайт/приложение">
+
+                            <div class="card-text">
+
+                                <div class="card-heading">
+                                    <h3 class="card-title">Дизайн-проект "Супрематизм"</h3>
+                                </div>
+                                <!--Карточкa инфо-->
+                                <div class="card-info">
+                                    <div class="category">
+                                        <h4 class="project-subtitle card-susubtitle">Инструменты:</h4>
+                                        <p class="project-paragraph about-box-text">Adobe Illustrator</p>
+                                        <p class="project-paragraph about-box-text">Adobe Photoshop</p>
+                                        <p class="project-paragraph about-box-text">Adobe After Effects</p>
+                                        <p class="project-paragraph about-box-text">Figma</p>
+                                        <p class="project-paragraph about-box-text">Wix</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-block">
+                                <h2><a class="block-link" href="https://zhidkoulyana.wixsite.com/suprematism" target="_blank">Посмотреть</a>
+                                </h2>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card filterDiv design">
+                        <div class="card-project-block">
                             <img class="card-project-image" src="img/photo/А2.jpg" alt="проект фестиваля">
 
                             <div class="card-text">
@@ -340,6 +368,35 @@
 
                     <div class="card filterDiv front">
                         <div class="card-project-block">
+                            <img class="card-project-image" src="img/project/corealt.jpg" alt="сайт">
+
+                            <div class="card-text">
+
+                                <div class="card-heading">
+                                    <h3 class="card-title">Сайт аренды коммерческой недвижимости</h3>
+                                </div>
+                                <!--Карточкa инфо-->
+                                <div class="card-info">
+                                    <div class="category">
+                                        <h4 class="project-subtitle card-susubtitle">Инструменты:</h4>
+                                        <p class="project-paragraph about-box-text">HTML/CSS</p>
+                                        <p class="project-paragraph about-box-text">JS</p>
+                                        <p class="project-paragraph about-box-text">Figma</p>
+                                        <p class="project-paragraph about-box-text">Adobe Photoshop</p>
+                                        <p class="project-paragraph about-box-text">Wix</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-block card-block-poster">
+                                <h2><a class="block-link" href="https://zhidkoulyana.wixsite.com/corealt" target="_blank">Посмотреть</a>
+                                </h2>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <!-- <div class="card filterDiv front">
+                        <div class="card-project-block">
                             <img class="card-project-image" src="img/project/bloger.png" alt="проект фестиваля">
 
                             <div class="card-text">
@@ -348,7 +405,7 @@
                                     <h3 class="card-title">Сайт для поиска блогеров-экспертов</h3>
                                 </div>
                                 <!--Карточкa инфо-->
-                                <div class="card-info">
+                    <!-- <div class="card-info">
                                     <div class="category">
                                         <h4 class="project-subtitle card-susubtitle">Инструменты:</h4>
                                         <p class="project-paragraph about-box-text">Adobe Illustrator</p>
@@ -362,7 +419,7 @@
                                 </h2>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
                     <div class="card filterDiv front">
                         <div class="card-project-block">
@@ -512,34 +569,6 @@
                             </div>
                         </div>
                     </a>
-
-                    <div class="card filterDiv design">
-                        <div class="card-project-block">
-                            <img class="card-project-image" src="img/photo/планшеты.jpg" alt="проект сайт/приложение">
-
-                            <div class="card-text">
-
-                                <div class="card-heading">
-                                    <h3 class="card-title">Дизайн-проект "Супрематизм"</h3>
-                                </div>
-                                <!--Карточкa инфо-->
-                                <div class="card-info">
-                                    <div class="category">
-                                        <h4 class="project-subtitle card-susubtitle">Инструменты:</h4>
-                                        <p class="project-paragraph about-box-text">Adobe Illustrator</p>
-                                        <p class="project-paragraph about-box-text">Adobe Photoshop</p>
-                                        <p class="project-paragraph about-box-text">Adobe After Effects</p>
-                                        <p class="project-paragraph about-box-text">Figma</p>
-                                        <p class="project-paragraph about-box-text">Wix</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="card-block">
-                                <h2><a class="block-link" href="https://zhidkoulyana.wixsite.com/suprematism" target="_blank">Посмотреть</a>
-                                </h2>
-                            </div>
-                        </div>
-                    </div>
 
                     <a href="img/photo/3.png" class="card filterDiv design" data-fancybox="images">
                         <img class="card-img" src="img/photo/3.png" alt="image">
