--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 
                     <div class="card filterDiv design">
                         <div class="card-project-block">
-                            <img class="card-project-image" src="img/photo/планшеты.jpg" alt="проект сайт/приложение">
+                            <img class="card-project-image" src="img/photo/супрематизм.jpg" alt="проект сайт/приложение">
 
                             <div class="card-text">
 
@@ -340,33 +340,7 @@
                         </div>
                     </div>
 
-                    <div class="card filterDiv design">
-                        <div class="card-project-block">
-                            <img class="card-project-image" src="img/photo/А2.jpg" alt="проект фестиваля">
-
-                            <div class="card-text">
-
-                                <div class="card-heading">
-                                    <h3 class="card-title">Проект фестиваля</h3>
-                                </div>
-                                <!--Карточкa инфо-->
-                                <div class="card-info">
-                                    <div class="category">
-                                        <h4 class="project-subtitle card-susubtitle">Инструменты:</h4>
-                                        <p class="project-paragraph about-box-text">Adobe Illustrator</p>
-                                        <p class="project-paragraph about-box-text">Adobe After Effects</p>
-                                        <p class="project-paragraph about-box-text">Tilda</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="card-block">
-                                <h2><a class="block-link" href="http://smakui.tilda.ws/" target="_blank">Посмотреть</a>
-                                </h2>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="card filterDiv front">
+                    <div class="card filterDiv front design">
                         <div class="card-project-block">
                             <img class="card-project-image" src="img/project/corealt.jpg" alt="сайт">
 
@@ -394,10 +368,35 @@
                         </div>
                     </div>
 
-
-                    <!-- <div class="card filterDiv front">
+                    <div class="card filterDiv design">
                         <div class="card-project-block">
-                            <img class="card-project-image" src="img/project/bloger.png" alt="проект фестиваля">
+                            <img class="card-project-image" src="img/photo/смакуй.jpg" alt="проект фестиваля">
+
+                            <div class="card-text">
+
+                                <div class="card-heading">
+                                    <h3 class="card-title">Проект фестиваля</h3>
+                                </div>
+                                <!--Карточкa инфо-->
+                                <div class="card-info">
+                                    <div class="category">
+                                        <h4 class="project-subtitle card-susubtitle">Инструменты:</h4>
+                                        <p class="project-paragraph about-box-text">Adobe Illustrator</p>
+                                        <p class="project-paragraph about-box-text">Adobe After Effects</p>
+                                        <p class="project-paragraph about-box-text">Tilda</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-block">
+                                <h2><a class="block-link" href="http://smakui.tilda.ws/" target="_blank">Посмотреть</a>
+                                </h2>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card filterDiv front">
+                        <div class="card-project-block">
+                            <img class="card-project-image" src="img/project/bloger.png" alt="сайт для блогеров">
 
                             <div class="card-text">
 
@@ -405,7 +404,7 @@
                                     <h3 class="card-title">Сайт для поиска блогеров-экспертов</h3>
                                 </div>
                                 <!--Карточкa инфо-->
-                    <!-- <div class="card-info">
+                                <div class="card-info">
                                     <div class="category">
                                         <h4 class="project-subtitle card-susubtitle">Инструменты:</h4>
                                         <p class="project-paragraph about-box-text">Adobe Illustrator</p>
@@ -415,31 +414,7 @@
                                 </div>
                             </div>
                             <div class="card-block">
-                                <h2><a class="block-link" href="https://webmart.pro/" target="_blank">Посмотреть</a>
-                                </h2>
-                            </div>
-                        </div>
-                    </div> -->
-
-                    <div class="card filterDiv front">
-                        <div class="card-project-block">
-                            <img class="card-project-image" src="img/project/Kuba.jpg" alt="приложение">
-
-                            <div class="card-text">
-
-                                <div class="card-heading">
-                                    <h3 class="card-title">Сайт путешествий по Кубе</h3>
-                                </div>
-                                <!--Карточкa инфо-->
-                                <div class="card-info">
-                                    <div class="category">
-                                        <h4 class="project-subtitle card-susubtitle">Инструменты:</h4>
-                                        <p class="project-paragraph about-box-text">HTML/CSS</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="card-block card-block-poster">
-                                <h2><a class="block-link" href="https://ulyanazhidko.github.io/Kuba/" target="_blank">Посмотреть</a>
+                                <h2><a class="block-link" href="https://ulyanazhidko.github.io/bloggers/" target="_blank">Посмотреть</a>
                                 </h2>
                             </div>
                         </div>
@@ -466,6 +441,30 @@
                             </div>
                             <div class="card-block card-block-poster">
                                 <h2><a class="block-link" href="https://zhidkoulyana.wixsite.com/bvlgaryposters" target="_blank">Посмотреть</a>
+                                </h2>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card filterDiv front">
+                        <div class="card-project-block">
+                            <img class="card-project-image" src="img/project/Kuba.jpg" alt="приложение">
+
+                            <div class="card-text">
+
+                                <div class="card-heading">
+                                    <h3 class="card-title">Сайт путешествий по Кубе</h3>
+                                </div>
+                                <!--Карточкa инфо-->
+                                <div class="card-info">
+                                    <div class="category">
+                                        <h4 class="project-subtitle card-susubtitle">Инструменты:</h4>
+                                        <p class="project-paragraph about-box-text">HTML/CSS</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-block card-block-poster">
+                                <h2><a class="block-link" href="https://ulyanazhidko.github.io/Kuba/" target="_blank">Посмотреть</a>
                                 </h2>
                             </div>
                         </div>
@@ -519,24 +518,6 @@
                         </div>
                     </div>
 
-                    <a href="img/photo/жук.jpg" class="card filterDiv design" data-fancybox="images">
-                        <img class="card-img" src="img/photo/жук.jpg" alt="image">
-                        <div class="card-text">
-                            <div class="card-heading">
-                                <h3 class="card-title">Моделирование насекомого</h3>
-                            </div>
-                            <!--Карточкa инфо-->
-                            <div class="card-info">
-                                <div class="category">
-                                    <h4 class="project-subtitle card-susubtitle">Инструменты:</h4>
-                                    <p class="project-paragraph about-box-text">3ds Max</p>
-                                    <p class="project-paragraph about-box-text">KeyShot</p>
-                                    <p class="project-paragraph about-box-text">Adobe Illustrator</p>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-
                     <a href="img/photo/инфографика_uiux.jpg" class="card filterDiv design" data-fancybox="images">
                         <img class="card-img" src="img/photo/инфографика_uiux.jpg" alt="image">
                         <div class="card-text">
@@ -570,8 +551,8 @@
                         </div>
                     </a>
 
-                    <a href="img/photo/3.png" class="card filterDiv design" data-fancybox="images">
-                        <img class="card-img" src="img/photo/3.png" alt="image">
+                    <a href="img/photo/флакон.jpg" class="card filterDiv design" data-fancybox="images">
+                        <img class="card-img" src="img/photo/флакон.jpg" alt="image">
                         <div class="card-text">
                             <div class="card-heading">
                                 <h3 class="card-title">Разработка упаковки и флакона духов</h3>
