--- a/index.html
+++ b/index.html
@@ -10,12 +10,28 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/menu.css" />
     <link rel="shortcut icon" href="img/favicon.svg">
 </head>
 
 <body>
-    <header class="hero">
+    <header class="hero" id="home">
         <div class="container">
+
+            <div class="hamburger-menu">
+                <input id="menu__toggle" type="checkbox" />
+                <label class="menu__btn" for="menu__toggle">
+                  <span></span>
+                </label>
+                <ul class="menu__box">
+                    <li><a class="menu__item" href="#home">Главная</a></li>
+                    <li><a class="menu__item" href="#skills">Навыки</a></li>
+                    <li><a class="menu__item" href="#work">Опыт работы</a></li>
+                    <li><a class="menu__item" href="#process">Процесс работы</a></li>
+                    <li><a class="menu__item" href="#projects">Проекты</a></li>
+                    <li><a class="menu__item" href="#yak1">Контакты</a></li>
+                </ul>
+            </div>
 
             <div class="hero-header">
                 <div class="social-links hero-header-social wow animate__animated animate__fadeInDown" data-wow-delay="0.2s">
@@ -46,6 +62,8 @@
                     <div class="hero-header-mail">
                         <a class="contacts-link" href="mailto:zhidko.ulyana@gmail.com">zhidko.ulyana@gmail.com</a>
                     </div>
+
+
                 </div>
             </div>
 
@@ -69,7 +87,7 @@
     </header>
 
     <main>
-        <section class="section skills">
+        <section class="section skills" id="skills">
             <div class="container">
                 <h2 class="section-title wow animate__animated animate__fadeInLeft">Использую в работе</h2>
                 <div class="flex-cont">
@@ -212,7 +230,7 @@
             </div>
         </section>
 
-        <section class="section work">
+        <section class="section work" id="work">
             <div class="container">
                 <h2 class="section-title wow animate__animated animate__fadeInLeft">Опыт работы</h2>
                 <div class="wow animate__animated animate__zoomIn" data-wow-delay="0.3s">
@@ -244,7 +262,7 @@
             </div>
         </section>
 
-        <section class="section work-process">
+        <section class="section work-process" id="process">
             <div class="container">
                 <h2 class="section-title wow animate__animated animate__fadeInLeft">Процесс работы</h2>
                 <div class="work-process-block wow animate__animated animate__zoomIn" data-wow-delay="0.3s">
@@ -300,7 +318,7 @@
             </div>
         </section>
 
-        <section class="section projects">
+        <section class="section projects" id="projects">
             <div class="container">
                 <h2 class="section-title wow animate__animated animate__fadeInLeft">Проекты</h2>
 
