--- a/index.html
+++ b/index.html
@@ -62,8 +62,6 @@
                     <div class="hero-header-mail">
                         <a class="contacts-link" href="mailto:zhidko.ulyana@gmail.com">zhidko.ulyana@gmail.com</a>
                     </div>
-
-
                 </div>
             </div>
 
@@ -89,14 +87,15 @@
     <main>
         <section class="section skills" id="skills">
             <div class="container">
-                <h2 class="section-title wow animate__animated animate__fadeInLeft">Использую в работе</h2>
+                <h2 class="section-title wow animate__animated animate__fadeInLeft">Использую в проектах</h2>
                 <div class="flex-cont">
                     <div class="first-skills wow animate__animated animate__zoomIn" data-wow-delay="1.2s">
                         <div class="skills">
-                            <p class="skill">HTML5</p>
-                            <p class="skill">CSS3</p>
+                            <p class="skill">HTML5/CSS3</p>
                             <p class="skill">JavaScript</p>
-                            <p class="skill">Evolution CMS</p>
+                            <p class="skill">Adobe Illustrator</p>
+                            <p class="skill">Adobe Photoshop</p>
+                            <p class="skill">Figma</p>
                         </div>
 
                         <div class="skill-bar">
@@ -104,6 +103,7 @@
                             <div class="bar front expert" data-skill="19 проектов"></div>
                             <div class="bar front basic" data-skill="18 проектов"></div>
                             <div class="bar front learning" data-skill="7 проектов"></div>
+                            <div class="bar front expert" data-skill="19 проектов"></div>
                         </div>
                     </div>
 
@@ -115,120 +115,98 @@
                         <div class="prog">
                             <p class="skill">JQuery</p>
                             <p class="skill">Bootstrap</p>
-
-                        </div>
-                        <div class="prog">
+                            <p class="skill">Evolution CMS</p>
                             <p class="skill">Github</p>
+                        </div>
+
+                        <div class="prog">
+                            <p class="skill">Adobe After Effects</p>
                             <p class="skill">WordPress</p>
-                        </div>
-
-                    </div>
-
-                </div>
-
-                <h2 class="section-title wow animate__animated animate__fadeInLeft" data-wow-delay="2s">Также знаю</h2>
-                <div class="flex-design-cont">
-                    <div class="first-skills wow animate__animated animate__zoomIn" data-wow-delay="2.2s">
-                        <div class="design-skils wow animate__animated animate__zoomIn" data-wow-delay="2.5s">
-                            <div class="design">
-                                <p class="skill">Adobe Illustrator</p>
-                                <p class="skill">Adobe Photoshop</p>
-                            </div>
-                            <div class="design">
-                                <p class="skill">Adobe After Effects</p>
-                                <p class="skill">Adobe InDesign</p>
-                            </div>
-                            <div class="design">
-                                <p class="skill">Figma</p>
-                                <p class="skill">3Ds Max</p>
-                            </div>
-                            <div class="design">
-                                <p class="skill">Tilda</p>
-                                <p class="skill">Wix</p>
-                            </div>
+                            <p class="skill">Tilda</p>
+                            <p class="skill">Wix</p>
                         </div>
                     </div>
-
-
-                    <ul class="timeline wow animate__animated animate__zoomIn" data-wow-delay="2.5s">
-                        <!-- Item 1 -->
-                        <li class="timeline-li">
-                            <div class="direction-l">
-                                <div class="flag-wrapper">
-                                    <span class="hexa"></span>
-                                    <span class="flag">обучение</span>
-                                    <span class="time-wrapper"><span class="time">2017-2022</span></span>
-                                </div>
-                                <div class="desc">
-                                    БГУ, Коммуникативный дизайн
-                                </div>
-                            </div>
-                        </li>
-
-                        <!-- Item 2 -->
-                        <li class="timeline-li">
-                            <div class="direction-r">
-                                <div class="flag-wrapper">
-                                    <span class="hexa"></span>
-                                    <span class="flag flag-sert"><a href="img/Microsoft 20480 - Zhidko.jpg"
-                                            target="_blank">сертификат</a></span>
-                                    <span class="time-wrapper"><span class="time">01.06.2020</span></span>
-                                </div>
-                                <div class="desc">Institute of IT&Business Administration IBA Group Microsoft 20480
-                                    <strong>"Программирование в HTML5 с JavaScript и CSS3"</strong> <br>
-                                    <ul style="text-align: left;list-style-type: disc;">
-                                        <li>HTML, CSS и JavaScript</li>
-                                        <li>разработка Windows Store и веб-приложений</li>
-                                        <li>создание программных компонентов и структур</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </li>
-
-                        <!-- Item 3 -->
-                        <li class="timeline-li">
-                            <div class="direction-l">
-                                <div class="flag-wrapper">
-                                    <span class="hexa"></span>
-                                    <span class="flag flag-sert"><a href="https://www.futurelearn.com/certificates/fv2hhxt"
-                                            target="_blank">сертификат</a></span>
-                                    <span class="time-wrapper"><span class="time">16.07.2020</span></span>
-                                </div>
-                                <div class="desc">
-                                    Онлайн-курс<br> <strong>"Learn to Code for the Web"</strong>
-                                    <ul style="text-align: left;list-style-type: disc;">
-                                        <li>HTML, CSS и JavaScript</li>
-                                        <li>создании веб-страниц и приложений</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </li>
-
-                        <!-- Item 4 -->
-                        <li class="timeline-li">
-                            <div class="direction-r">
-                                <div class="flag-wrapper">
-                                    <span class="hexa"></span>
-                                    <span class="flag flag-sert"><a href="img/WebSert-Zhidko.jpg"
-                                            target="_blank">сертификат</a></span>
-                                    <span class="time-wrapper"><span class="time">20.08.2020</span></span>
-                                </div>
-                                <div class="desc">Летний университет БГУ<br><strong>Курс Web-программирование</strong>
-                                    <br>
-                                    <ul style="text-align: left;list-style-type: disc;">
-                                        <li>технологии и протоколы сети</li>
-                                        <li>различные типы верстки</li>
-                                        <li>отзывчивый веб-дизайн</li>
-                                        <li>библиотеки для верстки</li>
-                                        <li>асинхронность в JS</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
                 </div>
+
+                <ul class="timeline wow animate__animated animate__zoomIn" data-wow-delay="2.5s">
+                    <!-- Item 1 -->
+                    <li class="timeline-li">
+                        <div class="direction-l">
+                            <div class="flag-wrapper">
+                                <span class="hexa"></span>
+                                <span class="flag">обучение</span>
+                                <span class="time-wrapper"><span class="time">2017-2022</span></span>
+                            </div>
+                            <div class="desc">
+                                БГУ, Коммуникативный дизайн
+                            </div>
+                        </div>
+                    </li>
+
+                    <!-- Item 2 -->
+                    <li class="timeline-li">
+                        <div class="direction-r">
+                            <div class="flag-wrapper">
+                                <span class="hexa"></span>
+                                <span class="flag flag-sert"><a href="img/Microsoft 20480 - Zhidko.jpg"
+                                            target="_blank">сертификат</a></span>
+                                <span class="time-wrapper"><span class="time">01.06.2020</span></span>
+                            </div>
+                            <div class="desc">Institute of IT&Business Administration IBA Group Microsoft 20480
+                                <strong>"Программирование в HTML5 с JavaScript и CSS3"</strong> <br>
+                                <ul style="text-align: left;list-style-type: disc;">
+                                    <li>HTML, CSS и JavaScript</li>
+                                    <li>разработка Windows Store и веб-приложений</li>
+                                    <li>создание программных компонентов и структур</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </li>
+
+                    <!-- Item 3 -->
+                    <li class="timeline-li">
+                        <div class="direction-l">
+                            <div class="flag-wrapper">
+                                <span class="hexa"></span>
+                                <span class="flag flag-sert"><a href="https://www.futurelearn.com/certificates/fv2hhxt"
+                                            target="_blank">сертификат</a></span>
+                                <span class="time-wrapper"><span class="time">16.07.2020</span></span>
+                            </div>
+                            <div class="desc">
+                                Онлайн-курс<br> <strong>"Learn to Code for the Web"</strong>
+                                <ul style="text-align: left;list-style-type: disc;">
+                                    <li>HTML, CSS и JavaScript</li>
+                                    <li>создании веб-страниц и приложений</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </li>
+
+                    <!-- Item 4 -->
+                    <li class="timeline-li">
+                        <div class="direction-r">
+                            <div class="flag-wrapper">
+                                <span class="hexa"></span>
+                                <span class="flag flag-sert"><a href="img/WebSert-Zhidko.jpg"
+                                            target="_blank">сертификат</a></span>
+                                <span class="time-wrapper"><span class="time">20.08.2020</span></span>
+                            </div>
+                            <div class="desc">Летний университет БГУ<br><strong>Курс Web-программирование</strong>
+                                <br>
+                                <ul style="text-align: left;list-style-type: disc;">
+                                    <li>технологии и протоколы сети</li>
+                                    <li>различные типы верстки</li>
+                                    <li>отзывчивый веб-дизайн</li>
+                                    <li>библиотеки для верстки</li>
+                                    <li>асинхронность в JS</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </section>
+
 
         <section class="section work" id="work">
             <div class="container">
