--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <header class="hero" id="home">
+    <header class="hero" id="about">
         <div class="container">
 
             <div class="hamburger-menu">
@@ -24,7 +24,7 @@
                   <span></span>
                 </label>
                 <ul class="menu__box">
-                    <li><a class="menu__item" href="#home">Главная</a></li>
+                    <li><a class="menu__item" href="#about">Обо мне</a></li>
                     <li><a class="menu__item" href="#skills">Навыки</a></li>
                     <li><a class="menu__item" href="#work">Опыт работы</a></li>
                     <li><a class="menu__item" href="#process">Процесс работы</a></li>
@@ -129,7 +129,6 @@
                 </div>
             </div>
         </section>
-
 
         <section class="section work" id="work">
             <div class="container">
