del: unused photo, add: edu, edit: footer name

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li><a class="menu__item" href="#work">Опыт работы</a></li>
                     <li><a class="menu__item" href="#process">Процесс работы</a></li>
                     <li><a class="menu__item" href="#projects">Проекты</a></li>
-                    <li><a class="menu__item" href="#yak1">Контакты</a></li>
+                    <li><a class="menu__item" href="#contacts">Контакты</a></li>
                 </ul>
             </div>
 
@@ -71,12 +71,17 @@
                 </div>
 
                 <div class="hero-text">
-                    <h1 class="hero-title wow animate__animated animate__fadeInRight" data-wow-delay="0.4s">Ульяна Жидко
-                    </h1>
+                    <h1 class="hero-title wow animate__animated animate__fadeInRight" data-wow-delay="0.4s">Ульяна Жидко</h1>
                     <p class="hero-discription wow animate__animated animate__fadeInRight" data-wow-delay="0.6s">
                         <span style="color: #FFBB01;">Frontend-разработчик, web-дизайнер. </span>
                         <br> Беларусь Минск.<br> Открыта для интересных проектов и новых возможностей по всему миру, всегда стараюсь принести пользу. Буду рада сотрудничеству!
                     </p>
+
+                    <div class="edu">
+                        <span class="edu-name">Образование</span>
+                        <p class="edu-text">2017г. – 2022г.<br> БГУ, коммуникативный дизайн</p>
+                    </div>
+
                 </div>
 
             </div>
@@ -511,7 +516,7 @@
         </section>
     </main>
 
-    <footer class="section" id="yak1">
+    <footer class="section" id="contacts">
         <div class="container">
             <h2 class="section-title wow animate__animated animate__fadeInLeft">Свяжитесь со мной</h2>
             <div class="contacts-block">
