--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="hero" id="about">
         <div class="container">
 
-            <div class="hamburger-menu">
+            <!--  <div class="hamburger-menu">
                 <input id="menu__toggle" type="checkbox" />
                 <label class="menu__btn" for="menu__toggle">
                   <span></span>
@@ -33,7 +33,23 @@
                     <li><a class="menu__item" href="#projects">Проекты</a></li>
                     <li><a class="menu__item" href="#contacts">Контакты</a></li>
                 </ul>
+            </div> -->
+
+            <div class="burger-menu">
+                <a href="" class="burger-menu_button">
+                    <spun class="burger-menu_lines"></spun>
+                </a>
+                <nav class="burger-menu_nav">
+                    <a href="#about" class="burger-menu_link">Обо мне</a>
+                    <a href="#skills" class="burger-menu_link">Навыки</a>
+                    <a href="#work" class="burger-menu_link">Опыт работы</a>
+                    <a href="#process" class="burger-menu_link">Процесс работы</a>
+                    <a href="#projects" class="burger-menu_link">Проекты</a>
+                    <a href="#contacts" class="burger-menu_link">Контакты</a>
+                </nav>
+                <div class="burger-menu_overlay"></div>
             </div>
+
 
             <div class="hero-header">
                 <div class="social-links hero-header-social wow animate__animated animate__fadeInDown" data-wow-delay="0.2s">
