--- a/index.html
+++ b/index.html
@@ -20,21 +20,6 @@
     <header class="hero" id="about">
         <div class="container">
 
-            <!--  <div class="hamburger-menu">
-                <input id="menu__toggle" type="checkbox" />
-                <label class="menu__btn" for="menu__toggle">
-                  <span></span>
-                </label>
-                <ul class="menu__box">
-                    <li><a class="menu__item" href="#about">Обо мне</a></li>
-                    <li><a class="menu__item" href="#skills">Навыки</a></li>
-                    <li><a class="menu__item" href="#work">Опыт работы</a></li>
-                    <li><a class="menu__item" href="#process">Процесс работы</a></li>
-                    <li><a class="menu__item" href="#projects">Проекты</a></li>
-                    <li><a class="menu__item" href="#contacts">Контакты</a></li>
-                </ul>
-            </div> -->
-
             <div class="burger-menu">
                 <a href="" class="burger-menu_button">
                     <spun class="burger-menu_lines"></spun>
@@ -255,7 +240,7 @@
 
                     <div class="card filterDiv design">
                         <div class="card-project-block">
-                            <img class="card-project-image" src="img/photo/супрематизм.jpg" alt="проект сайт/приложение">
+                            <img class="card-project-image" src="img/photo/супрематизм.jpg" alt="проект сайта/приложения">
 
                             <div class="card-text">
 
@@ -459,74 +444,114 @@
                         </div>
                     </div>
 
-                    <a href="img/photo/инфографика_uiux.jpg" class="card filterDiv design" data-fancybox="images">
-                        <img class="card-img" src="img/photo/инфографика_uiux.jpg" alt="image">
-                        <div class="card-text">
-                            <div class="card-heading">
-                                <h3 class="card-title">Инфографика: системный подход на&nbsp;примере UI/UX</h3>
-                            </div>
-                            <!--Карточкa инфо-->
-                            <div class="card-info">
-                                <div class="category">
-                                    <h4 class="project-subtitle card-susubtitle">Инструменты:</h4>
-                                    <p class="project-paragraph about-box-text">Adobe Illustrator</p>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
+                    <div class="card filterDiv design">
+                        <div class="card-project-block">
+                            <img class="card-project-image" src="img/photo/инфографика_uiux.jpg" alt="image">
 
-                    <a href="img/photo/Bauhaus.jpg" class="card filterDiv design" data-fancybox="images">
-                        <img class="card-img" src="img/photo/Bauhaus.jpg" alt="image">
-                        <div class="card-text">
-                            <div class="card-heading">
-                                <h3 class="card-title">Коллаж в стиле Bauhaus</h3>
-                            </div>
-                            <!--Карточкa инфо-->
-                            <div class="card-info">
-                                <div class="category">
-                                    <h4 class="project-subtitle card-susubtitle">Инструменты:</h4>
-                                    <p class="project-paragraph about-box-text">Фотоаппарат</p>
-                                    <p class="project-paragraph about-box-text">Adobe Photoshop</p>
+                            <div class="card-text">
+                                <div class="card-heading">
+                                    <h3 class="card-title">Инфографика: системный подход на&nbsp;примере UI/UX</h3>
+                                </div>
+                                <!--Карточкa инфо-->
+                                <div class="card-info">
+                                    <div class="category">
+                                        <h4 class="project-subtitle card-susubtitle">Инструменты:</h4>
+                                        <p class="project-paragraph about-box-text">Adobe Illustrator</p>
+                                    </div>
                                 </div>
                             </div>
+                            <div class="card-block card-block-poster">
+                                <h2>
+                                    <a class="block-link" href="img/photo/инфографика_uiux.jpg" class="card filterDiv design" data-fancybox="images">
+                                        <img src="img/zoom-in.svg" class="card-block-img" alt="zoom-in">
+                                    </a>
+                                </h2>
+                            </div>
                         </div>
-                    </a>
+                    </div>
 
-                    <a href="img/photo/флакон.jpg" class="card filterDiv design" data-fancybox="images">
-                        <img class="card-img" src="img/photo/флакон.jpg" alt="image">
-                        <div class="card-text">
-                            <div class="card-heading">
-                                <h3 class="card-title">Разработка упаковки и флакона духов</h3>
-                            </div>
-                            <!--Карточкa инфо-->
-                            <div class="card-info">
-                                <div class="category">
-                                    <h4 class="project-subtitle card-susubtitle">Инструменты:</h4>
-                                    <p class="project-paragraph about-box-text">3ds Max</p>
-                                    <p class="project-paragraph about-box-text">Adobe Illustrator</p>
-                                    <p class="project-paragraph about-box-text">Substance Painter</p>
-                                    <p class="project-paragraph about-box-text">AutoCAD</p>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
+                    <div class="card filterDiv design">
+                        <div class="card-project-block">
+                            <img class="card-project-image" src="img/photo/Bauhaus.jpg" alt="image">
 
-                    <a href="img/photo/флаеры.jpg" class="card filterDiv design" data-fancybox="images">
-                        <img class="card-img" src="img/photo/флаеры.jpg" alt="image">
-                        <div class="card-text">
-                            <div class="card-heading">
-                                <h3 class="card-title">Дизайн флаера</h3>
-                            </div>
-                            <!--Карточкa инфо-->
-                            <div class="card-info">
-                                <div class="category">
-                                    <h4 class="project-subtitle card-susubtitle">Инструменты:</h4>
-                                    <p class="project-paragraph about-box-text">Adobe Illustrator</p>
-                                    <p class="project-paragraph about-box-text">Adobe InDesign</p>
+                            <div class="card-text">
+                                <div class="card-heading">
+                                    <h3 class="card-title">Коллаж в стиле Bauhaus</h3>
+                                </div>
+                                <!--Карточкa инфо-->
+                                <div class="card-info">
+                                    <div class="category">
+                                        <h4 class="project-subtitle card-susubtitle">Инструменты:</h4>
+                                        <p class="project-paragraph about-box-text">Фотоаппарат</p>
+                                        <p class="project-paragraph about-box-text">Adobe Photoshop</p>
+                                    </div>
                                 </div>
                             </div>
+                            <div class="card-block card-block-poster">
+                                <h2>
+                                    <a class="block-link" href="img/photo/Bauhaus.jpg" class="card filterDiv design" data-fancybox="images">
+                                        <img src="img/zoom-in.svg" class="card-block-img" alt="zoom-in">
+                                    </a>
+                                </h2>
+                            </div>
                         </div>
-                    </a>
+                    </div>
+
+                    <div class="card filterDiv design">
+                        <div class="card-project-block">
+                            <img class="card-project-image" src="img/photo/флакон.jpg" alt="image">
+
+                            <div class="card-text">
+                                <div class="card-heading">
+                                    <h3 class="card-title">Разработка упаковки и флакона духов</h3>
+                                </div>
+                                <!--Карточкa инфо-->
+                                <div class="card-info">
+                                    <div class="category">
+                                        <h4 class="project-subtitle card-susubtitle">Инструменты:</h4>
+                                        <p class="project-paragraph about-box-text">3ds Max</p>
+                                        <p class="project-paragraph about-box-text">Adobe Illustrator</p>
+                                        <p class="project-paragraph about-box-text">Substance Painter</p>
+                                        <p class="project-paragraph about-box-text">AutoCAD</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-block card-block-poster">
+                                <h2>
+                                    <a class="block-link" href="img/photo/флакон.jpg" class="card filterDiv design" data-fancybox="images">
+                                        <img src="img/zoom-in.svg" class="card-block-img" alt="zoom-in">
+                                    </a>
+                                </h2>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card filterDiv design">
+                        <div class="card-project-block">
+                            <img class="card-project-image" src="img/photo/флаеры.jpg" alt="image">
+
+                            <div class="card-text">
+                                <div class="card-heading">
+                                    <h3 class="card-title">Дизайн флаера</h3>
+                                </div>
+                                <!--Карточкa инфо-->
+                                <div class="card-info">
+                                    <div class="category">
+                                        <h4 class="project-subtitle card-susubtitle">Инструменты:</h4>
+                                        <p class="project-paragraph about-box-text">Adobe Illustrator</p>
+                                        <p class="project-paragraph about-box-text">Adobe InDesign</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-block card-block-poster">
+                                <h2>
+                                    <a class="block-link" href="img/photo/флаеры.jpg" class="card filterDiv design" data-fancybox="images">
+                                        <img src="img/zoom-in.svg" class="card-block-img" alt="zoom-in">
+                                    </a>
+                                </h2>
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
 
