edit: process name edit: skill-bar amount

--- a/index.html
+++ b/index.html
@@ -102,16 +102,14 @@
                             <p class="skill">HTML5/CSS3</p>
                             <p class="skill">JavaScript</p>
                             <p class="skill">Adobe Illustrator</p>
-                            <p class="skill">Adobe Photoshop</p>
                             <p class="skill">Figma</p>
                         </div>
 
                         <div class="skill-bar">
-                            <div class="bar front advanced" data-skill="20 проектов"></div>
-                            <div class="bar front expert" data-skill="19 проектов"></div>
-                            <div class="bar front basic" data-skill="18 проектов"></div>
-                            <div class="bar front learning" data-skill="7 проектов"></div>
-                            <div class="bar front expert" data-skill="19 проектов"></div>
+                            <div class="bar front skill-1" data-skill="32 проектов"></div>
+                            <div class="bar front skill-2" data-skill="14 проектов"></div>
+                            <div class="bar front skill-3" data-skill="36 проектов"></div>
+                            <div class="bar front skill-4" data-skill="18 проектов"></div>
                         </div>
                     </div>
 
@@ -128,7 +126,7 @@
                         </div>
 
                         <div class="prog">
-                            <p class="skill">Adobe After Effects</p>
+                            <p class="skill">Adobe Photoshop</p>
                             <p class="skill">WordPress</p>
                             <p class="skill">Tilda</p>
                             <p class="skill">Wix</p>
@@ -172,7 +170,7 @@
 
         <section class="section work-process" id="process">
             <div class="container">
-                <h2 class="section-title wow animate__animated animate__fadeInLeft">Процесс работы</h2>
+                <h2 class="section-title wow animate__animated animate__fadeInLeft">Этапы разработки</h2>
                 <div class="work-process-block wow animate__animated animate__zoomIn" data-wow-delay="0.3s">
                     <div class="work-process-item">
                         <h3 class="work-process-item-title work-process-item-title-first">Получение задачи</h3>
