--- a/index.html
+++ b/index.html
@@ -76,14 +76,19 @@
 
                 <div class="hero-text">
                     <h1 class="hero-title wow animate__animated animate__fadeInRight" data-wow-delay="0.4s">Ульяна Жидко</h1>
-                    <p class="hero-discription wow animate__animated animate__fadeInRight" data-wow-delay="0.6s">
-                        <span style="color: #FFBB01;">Frontend-разработчик, web-дизайнер. </span>
-                        <br> Беларусь Минск.<br> Открыта для интересных проектов и новых возможностей по всему миру, всегда стараюсь принести пользу. Буду рада сотрудничеству!
-                    </p>
+
+                    <div class="hero-about wow animate__animated animate__fadeInRight" data-wow-delay="0.6s">
+                        <span>
+                        Frontend-разработчик, web-дизайнер
+                        </span>
+                        <p class="hero-discription">
+                            Беларусь Минск.<br> Открыта для интересных проектов и новых возможностей по всему миру, всегда стараюсь принести пользу. Буду рада сотрудничеству!
+                        </p>
+                    </div>
 
                     <div class="edu wow animate__animated animate__fadeInRight" data-wow-delay="0.8s">
                         <span class="edu-name">Образование</span>
-                        <p class="edu-text">2017г. – 2022г.<br> БГУ, коммуникативный дизайн</p>
+                        <p class="edu-text hero-discription">2017г. – 2022г.<br> БГУ, коммуникативный дизайн</p>
                     </div>
 
                 </div>
